--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "build:client": "webpack --color --hide-modules",
-    "build:server": "webpack --color --hide-modules",
-    "build": "run-p -c build:*",
-    "dist:client": "cross-env NODE_ENV=production webpack --color --hide-modules",
-    "dist:server": "cross-env NODE_ENV=production webpack --color --hide-modules",
-    "dist": "run-p -c dist:*"
+    "watch": "babel --watch=src/main/resources --out-dir=build/resources/main --ignore \"**/*.js\"",
+    "build": "npm-run-all build:*",
+    "build:js": "babel src/main/resources --out-dir=build/resources/main --ignore \"**/*.js\""
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
     "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
-    "@babel/register": "^7.4.0",
     "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
     "browserslist": "^4.6.6",
     "browserslist-config-enonic": "^1.0.4",
     "copy-webpack-plugin": "^5.0.3",
