--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "watch": "babel --watch=src/main/resources --out-dir=build/resources/main --ignore \"**/*.js\"",
     "build": "npm-run-all build:*",
-    "build:js": "babel src/main/resources --out-dir=build/resources/main --ignore \"**/*.js\""
+    "build:js": "babel src/main/resources --out-dir=build/resources/main --ignore \"**/*.js\"",
+    "vue": "./build-vue.sh"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "autoprefixer": "^9.6.1",
     "browserslist": "^4.6.6",
     "browserslist-config-enonic": "^1.0.4",
@@ -25,7 +28,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "^7.0.1",
