--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@ dependencies {
     include "com.enonic.xp:lib-i18n:${xpVersion}"
     include "com.enonic.lib:lib-http-client:2.0.0"
     include "com.enonic.xp:lib-mail:${xpVersion}"
+    include "com.enonic.xp:lib-value:${xpVersion}"
+    include "com.enonic.xp:lib-node:${xpVersion}"
     //include "com.enonic.xp:lib-context:${xpVersion}"
     //include "com.enonic.xp:lib-io:${xpVersion}"
-    //include "com.enonic.xp:lib-repo:${xpVersion}"
+    include "com.enonic.xp:lib-repo:${xpVersion}"
     //include "com.enonic.xp:lib-websocket:${xpVersion}"
     //include "com.enonic.lib:lib-mustache:2.0.0"
     //include "com.enonic.lib:lib-util:2.0.0"
