--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "^7.0.1",
+    "promise": "^8.1.0",
     "ramda": "^0.26.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -47,5 +48,6 @@
   "engines": {
     "node": ">= 8.10.0",
     "npm": ">= 5.6.0"
-  }
+  },
+  "dependencies": {}
 }
